pushing back update on html and css

--- a/index.html
+++ b/index.html
@@ -1,31 +1,36 @@
 <!DOCTYPE html>
-<html><head>
-    <title>Clipboard</title>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<meta name="author" content="Hocast">
-<meta name="description" content="">
-<meta name="keyword" content="">
-<link rel="stylesheet" type="text/css" href="css/style.css">
-<link rel="stylesheet" type="text/css" href="css/queries.css">
-</head>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <meta name="author" content="Hocast">
+        <meta name="description" content="">
+        <meta name="keyword" content="">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="css/queries.css">
+        <title>Clipboard</title>
+    </head>
     <body>
         <header>
             <div class="logo">
                 <img src="image/logo-1.svg" alt="logo-img">
-                <div class="content-wrapper">
-                    <h1 class="_header">A history of everything you copy</h1>
-                    <p class="desc">Clipboard allows you to track and organise everything you copy. instantly <br>access your clipboard on all your devices</p>
-                    <button class="_btn">Download for iOS</button>
-                    <button class="_btn.2">Download for Mac</button>
-                </div>
             </div>
         </header>
-        <div class="desc">
-        <h2 class="title">Keep track of your snippets</h2>
-        <p class="desc-title">Clipboard instantly stores any item you copy in the cloud, meaniny you can access<br> your snippets immediately on allyour devices. Our Mac and iOS apps will help you<br> organise everything. </p>
+        <div class="content-wrapper">
+            <h1 class="_header">A history of everything you copy</h1>
+            <p class="desc">Clipboard allows you to track and organise everything you copy. instantly <br>access your clipboard on all your devices</p>
         </div>
+        <div class="btn">
+            <button class="_btn">Download for iOS</button>
+            <button class="_btn-b">Download for Mac</button>
+         </div>
+        <section>
+             <div class="desc">
+                <h2 class="title">Keep track of your snippets</h2>
+                <p class="desc-title">Clipboard instantly stores any item you copy in the cloud, meaniny you can access<br> your snippets immediately on allyour devices. Our Mac and iOS apps will help you<br> organise everything. </p>
+            </div>
+        </section>
          <section>
             <div class="wrapper">
                 <div class="wrap-img">
