pushing back update

--- a/index.html
+++ b/index.html
@@ -19,16 +19,18 @@
         </header>
         <div class="content-wrapper">
             <h1 class="_header">A history of everything you copy</h1>
-            <p class="desc">Clipboard allows you to track and organise everything you copy. instantly <br>access your clipboard on all your devices</p>
+            <p class="desc">Clipboard allows you to track and organise everything you copy. instantly </p>
+            <p class="desc_b">access your clipboard on all your devices</p>
         </div>
         <div class="btn">
             <button class="_btn">Download for iOS</button>
             <button class="_btn-b">Download for Mac</button>
          </div>
         <section>
-             <div class="desc">
+             <div class="_desc">
                 <h2 class="title">Keep track of your snippets</h2>
-                <p class="desc-title">Clipboard instantly stores any item you copy in the cloud, meaniny you can access<br> your snippets immediately on allyour devices. Our Mac and iOS apps will help you<br> organise everything. </p>
+                <p class="desc-title">Clipboard instantly stores any item you copy in the cloud, meaniny you can access<br> your snippets immediately on allyour devices. Our Mac and iOS apps will help you</p>
+                    <p class="desc-title_b"> organise everything. </p>
             </div>
         </section>
          <section>
@@ -37,19 +39,22 @@
                     <img src="image/image-computer.png" class="img-1">
                 </div>
                 <div class="content-wrap">
-                    <h4>Quick Search</h4>
-                    <p>Easily search your snippets by content, <br>catergory, web address, application, and more. </p> 
-                    <h4>icloud sync</h4>
-                    <p>Instantly saves and sync snippets across all <br>your devices. </p> 
-                    <h4>Complete History</h4>
-                    <p>Retrieve any snippets from the first moment <br>you started using the app.</p>
+                    <h4 class="h_title">Quick Search</h4>
+                    <p class="-content-h">Easily search your snippets by content, <br>catergory, web address, application, and more. </p> 
+                    <h4 class="h_title">iCloud sync</h4>
+                    <p class="-content-h">Instantly saves and sync snippets across all <br>your devices. </p> 
+                    <h4 class="h_title">Complete History</h4>
+                    <p class="-content-h">Retrieve any snippets from the first moment <br>you started using the app.</p>
                 </div>
             </div>
         </section>
         <section>
             <div class="card-1">
-                <h2 class="card-tt">Access Clipboard anywhere</h2>
-                <p class="card-desc">Whether you're on the go, or on your computer, you can access your all Clipboard <br> snippets in a few simple clicks.  </p>
+                <div class="card-2">
+                   <h2 class="card-title">Access Clipboard anywhere</h2>
+                   <p class="desc-card">Whether you're on the go, or on your computer, you can access your all Clipboard </p>
+                   <p class="desc-card_b"> snippets in a few simple clicks.  </p>
+                </div>
                 <img src="image/image-devices.png" class="card-img">
             </div>
         </section>
@@ -62,12 +67,12 @@
                     <label class="cont-title">Create blacklists</label>
                     <p class="cont-desc">Ensure sensitve information never make its <br> way to your Clipboard by excluding certain <br> source.</p>
                 </div>
-                <div class="container-child_list">
+                <div class="container-child_list-b">
                     <img  src="image/icon-text.svg" class="cont-img"><br>
                     <label class="cont-title">Plain text snippets</label>
                     <p class="cont-desc">Remove unwanted formatting from copied text <br>for a consistent look.</p>
                 </div>
-                <div class="container-child_list">
+                <div class="container-child_list-c">
                     <img  src="image/icon-preview.svg" class="cont-img"><br>
                     <label class="cont-title">Sneak preview</label>
                     <p class="cont-desc">Quick preview of all snippets on your Clipboard <br>for easy accesss</p>
@@ -91,9 +96,12 @@
         <section>
             <div class="OS-wrapper">
                 <h1 class="OS-header">Clipboard for iOS and Mac OS</h1>
-                <p class="OS-desc">Available for free on the App store. Download for Mac or iOS, sync with iCloud and <br>you're already to start adding to your clipboard.</p>
+                <p class="OS-desc">Available for free on the App store. Download for Mac or iOS, sync with iCloud and </p>
+                <p class="OS-desc_b">you're already to start adding to your clipboard.</p>
+            </div>
+            <div class="btn-b">
                 <button class="_btn">Download for iOS</button>
-                <button class="_btn.2">Download for Mac</button>
+                <button class="_btn-b">Download for Mac</button>
             </div>
         </section>
         <footer>
@@ -107,13 +115,13 @@
                     </ul>
                 </div>
                 <div>
-                    <ul class="footer-link">
+                    <ul class="footer-link_b">
                         <li class="footer-links">Contact Us</li>
                         <li class="footer-links">Press Kit</li>
                     </ul>
                 </div>
                 <div>
-                    <ul class="icon-list">
+                    <ul class="icon-list_b">
                       <li class="icon-icon"><img src="image/icon-facebook.svg"></li>
                       <li class="icon-icon"><img src="image/icon-twitter.svg"></li>
                       <li class="icon-icon"><img src="image/icon-instagram.svg"></li>
