bootstrap css added and index html updated

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="description" content="">
         <meta name="keyword" content="">
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="css/queries.css">
         <title>Clipboard</title>
     </head>
@@ -22,7 +23,7 @@
             <p class="desc">Clipboard allows you to track and organise everything you copy. instantly </p>
             <p class="desc_b">access your clipboard on all your devices</p>
         </div>
-        <div class="btn">
+        <div class="btn-_b">
             <button class="_btn">Download for iOS</button>
             <button class="_btn-b">Download for Mac</button>
          </div>
@@ -58,31 +59,32 @@
                 <img src="image/image-devices.png" class="card-img">
             </div>
         </section>
-        <section class="work_flow-container">
-            <h2 class="work_flow-title">Supercharge your workflow</h2>
-            <p class="why-desc">We've got the tools to boost your productivity.</p>
-            <div class="container-list">
-                <div class="container-child_list">
+        <div class="container">
+            <div class="row">
+                <div class="col-12" style="text-align: center;">
+                    <h2>Supercharge your workflow</h2>
+                    <p>We've got the tools to boost your productivity.</p>
+                </div>
+                <div class="col-lg-4">
                     <img  src="image/icon-blacklist.svg" class="cont-img"><br>
-                    <label class="cont-title">Create blacklists</label>
-                    <p class="cont-desc">Ensure sensitve information never make its <br> way to your Clipboard by excluding certain <br> source.</p>
+                    <h4>Create blacklists<h4>
+                    <p class="sbg">Ensure sensitve information never make its <br> way to your Clipboard by excluding certain <br> source.</p>
                 </div>
-                <div class="container-child_list-b">
+                <div class="col-lg-4">
                     <img  src="image/icon-text.svg" class="cont-img"><br>
-                    <label class="cont-title">Plain text snippets</label>
-                    <p class="cont-desc">Remove unwanted formatting from copied text <br>for a consistent look.</p>
+                    <h4>Plain text snippets</h4>
+                    <p>Remove unwanted formatting from copied text <br>for a consistent look.</p>
                 </div>
-                <div class="container-child_list-c">
+                <div class="col-lg-4">
                     <img  src="image/icon-preview.svg" class="cont-img"><br>
-                    <label class="cont-title">Sneak preview</label>
-                    <p class="cont-desc">Quick preview of all snippets on your Clipboard <br>for easy accesss</p>
+                    <h4>Sneak preview</h4>
+                    <p>Quick preview of all snippets on your Clipboard <br>for easy accesss</p>
                 </div>
             </div>
-        </section>
+        </div>
         <section>
                 <div class="_lgos">
                     <div>
-                        <img src="image/logo.svg" class="_lgos-img">
                         <ul class="icon-list">
                           <li class="icon-icon"><img src="image/logo-google.png"></li>
                           <li class="icon-icon"><img src="image/logo-ibm.png"></li>
@@ -93,7 +95,7 @@
                     </div>
                 </div>
         </section>
-        <section>
+        <section class="OS-banner"
             <div class="OS-wrapper">
                 <h1 class="OS-header">Clipboard for iOS and Mac OS</h1>
                 <p class="OS-desc">Available for free on the App store. Download for Mac or iOS, sync with iCloud and </p>
