bootsrap.css deleted

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="col-lg-4">
                     <img  src="image/icon-blacklist.svg" class="cont-img"><br>
                     <h4>Create blacklists<h4>
-                    <p class="sbg">Ensure sensitve information never make its <br> way to your Clipboard by excluding certain <br> source.</p>
+                    <p>Ensure sensitve information never make its <br> way to your Clipboard by excluding certain <br> source.</p>
                 </div>
                 <div class="col-lg-4">
                     <img  src="image/icon-text.svg" class="cont-img"><br>
