--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
         <meta name="description" content="">
         <meta name="keyword" content="">
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="css/queries.css">
         <title>Clipboard</title>
     </head>
     <body>
         <div class="container">
             <header>
                 <div class="header-logo">
-                    <!-- <img src="image/bg-header-mobile.png" alt="mobile wrapper" class="header-wrapper"> -->
                     <img src="image/logo-1.svg" alt="logo-img" class="logo">
                 </div>
 
