updated responsive design

--- a/index.html
+++ b/index.html
@@ -67,24 +67,24 @@
             <section>
                 <div class="wrapper-2">
                     <div class="description">
-                        <h4>Supercharge your workflow</h4>
-                        <p>We've got the tools to boost your productivity.</p>
+                        <h4 class="flow-title">Supercharge your workflow</h4>
+                        <p class="flow-desc">We've got the tools to boost your productivity.</p>
                     </div>
                     <div class="content-wrapper2">
                         <div class="feat-wrap">
                             <img  src="image/icon-blacklist.svg" alt="an icon" class="cont-img"><br>
-                            <h4>Create blacklists</h4>
-                            <p>Ensure sensitive information never make its <br> way to your Clipboard by excluding certain <br> source.</p>
+                            <h4 class="cont-title">Create blacklists</h4>
+                            <p class="cont-desc1">Ensure sensitive information never make its <br> way to your Clipboard by excluding certain <br> source.</p>
                         </div>
                         <div class="feat-wrap">
                             <img  src="image/icon-text.svg" alt="icon text" class="cont-img"><br>
-                            <h4>Plain text snippets</h4>
-                            <p>Remove unwanted formatting from copied text <br>for a consistent look.</p>
+                            <h4 class="cont-title">Plain text snippets</h4>
+                            <p class="cont-desc2">Remove unwanted formatting from copied text <br>for a consistent look.</p>
                         </div>
                         <div class="feat-wrap">
                             <img  src="image/icon-preview.svg" alt="icon preview" class="cont-img"><br>
-                            <h4>Sneak preview</h4>
-                            <p>Quick preview of all snippets on your Clipboard <br>for easy access</p>
+                            <h4 class="cont-title">Sneak preview</h4>
+                            <p class="cont-desc3">Quick preview of all snippets on your Clipboard <br>for easy access</p>
                         </div>
                     </div>
                 </div>
@@ -111,22 +111,24 @@
             <footer>
                 <div class="_footer">
                     <img src="image/logo-1.svg" alt="footer logo" class="footer-img">
-                    <div class="links">
-                        <ul class="footer-link">
-                            <li class="footer-links">FAQs</li>
-                            <li class="footer-links">Contact Us</li>
-                        </ul>
-                    </div>
-                    <div class="links">
-                        <ul class="footer-link">
-                            <li class="footer-links">Privacy Policy</li>
-                            <li class="footer-links">Press Kit</li>
-                        </ul>
-                    </div>
-                    <div class="links">
-                        <ul class="footer-link">
-                            <li class="footer-links">Install Guide</li>
-                        </ul>
+                    <div class="footer-menu">
+                        <div class="links1">
+                            <ul class="footer-link">
+                                <li class="footer-links">FAQs</li>
+                                <li class="footer-links">Contact Us</li>
+                            </ul>
+                        </div>
+                        <div class="links2">
+                            <ul class="footer-link">
+                                <li class="footer-links">Privacy Policy</li>
+                                <li class="footer-links">Press Kit</li>
+                            </ul>
+                        </div>
+                        <div class="links3">
+                            <ul class="footer-link">
+                                <li class="footer-links">Install Guide</li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="social">
                         <ul class="icon-list_b">
