pushing back update

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <title>Clipboard</title>
     </head>
     <body>
+    <div id="preloader"></div>
         <div class="container">
             <header>
                 <div class="header-logo">
@@ -109,7 +110,7 @@
                 </div>
             </section>
             <footer>
-                <div class="_footer">
+                <div class="footer">
                     <img src="image/logo-1.svg" alt="footer logo" class="footer-img">
                     <div class="links">
                         <ul class="footer-link">
@@ -135,8 +136,23 @@
                             <li class="icon-icon"><img src="image/icon-instagram.svg" alt="instagram icon"></li>
                         </ul>
                     </div>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/s4y_kzpCthQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/s4y_kzpCthQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/s4y_kzpCthQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/s4y_kzpCthQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/s4y_kzpCthQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/s4y_kzpCthQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/s4y_kzpCthQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/s4y_kzpCthQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </footer>
         </div>
+        <script>
+            var loader = document.getElementById("preloader");
+
+            window.addEventListener("load", function(){
+                loader.style.display = "none";
+            })
+        </script>
     </body>
 </html>
